<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/reports">

    <fragment
        android:id="@+id/reports"
        android:name="com.dnieln7.roadwatchman.ui.app.pages.reportes.Reports"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_reportes" />

    <fragment
        android:id="@+id/profile"
        android:name="com.dnieln7.roadwatchman.ui.app.pages.profile.Profile"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/settings"
        android:name="com.dnieln7.roadwatchman.ui.app.pages.settings.Settings"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/about"
        android:name="com.dnieln7.roadwatchman.ui.app.pages.about.About"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
</navigation>